--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
 		<!-- External Style Sheet -->
-		<link rel="stylesheet" href="capstone1.css">
+		<link rel="stylesheet" href="index.css">
 
 		<!-- Text Font -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
