Edit image names to debug

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="container h-100">
 			<div class="row main-header">
 				<div class="col-lg-6 col-md-8 header-one">
-					<img src="./images/Capture.jpg" class="capture">
+					<img src="./images/Capture.JPG" class="capture">
 					<span class="header-one-text">Greetings!</span>
 					<h5>My name is <strong>Joseph Nathaniel <em>"Nat"</em> Quinio</strong> and I'm a Full Stack Web Developer in the making.</h5>
 					<div class="links-container">
@@ -110,7 +110,7 @@
 				<div class="row content-row content-row1">
 					<div class="col-xl-7 proj-image">
 						<div class="image-box text-center">
-							<img src="./images/HTML-final.jpg" class="img-liquid w-75">
+							<img src="./images/HTML-final.JPG" class="img-liquid w-75">
 						</div>
 					</div>
 					<div class="col-xl-5 proj-code">
@@ -147,14 +147,14 @@
 					</div>
 					<div class="col-xl-7 proj-image proj-image__left">
 						<div class="image-box text-center">
-							<img src="./images/CSS-final.jpg" class="img-liquid w-75">
+							<img src="./images/CSS-final.JPG" class="img-liquid w-75">
 						</div>
 					</div>
 				</div>
 				<div class="row content-row content-row1">
 					<div class="col-xl-7 proj-image">
 						<div class="image-box text-center">
-							<img src="./images/bootstrapfinal.jpg" class="img-liquid w-75">
+							<img src="./images/bootstrapfinal.JPG" class="img-liquid w-75">
 						</div>
 					</div>
 					<div class="col-xl-5 proj-code">
